* v1.3.0 (unreleased)
  - [TODO] QtQuick support

* v1.2.1 (unreleased)
  - Support for resizing dock widgets when they are in overlay/popup mode (autohide/sidebar feature)
  - Fixed title bar close button enabled state not being restored with Layout saver (#137)
  - Installs a version header (kddockwidgets_version.h) that defines a version string and other useful versioning macros (#138)

* v1.2.0 (17 December 2020)
  - Wayland support
  - Added Flag_KeepAboveIfNotUtilityWindow, so you can have keep above even if
    floating window is shown in the task-bar.
  - Added DockWidget::windowActiveAboutToChange() signal
  - Added support for Qt6 (PySide6 support is lacking)
  - Added WASM support

* v1.1.1 (11 December 2020)
  - Windows: Fixed a crash when clicking on the close button for floating windows in some situations (#110)
  - Don't show dock/undock icon when dockwidget is not dockable (#99)

* v1.1.0 (26 October 2020)
  - New drop indicator style type: Segmented Indicators
  - Windows: Drop Shadow for floating windows
  - Added AutoHide / SideBar support
  - Added FocusScope support
  - Added DockWidget::isFocused() and DockWidgetBase::isFocusedChanged()
  - Added Config::Flag_AlwaysTitleBarWhenFloating, which complements Flag_HideTitleBarWhenTabsVisible
  - Added Config::Flag_DontUseUtilityWindowsForFloating
  - Added Config::Flag_TitleBarHasMinimizeButton
  - Added Config::Flag_TitleBarNoFloatButton
  - Added Config::Flag_AutoHideSupport
  - Added Config::setTabbingAllowedFunc(TabbingAllowedFunc func)
  - HDPI improvements, new high-res icons
  - Bugfixes:
    - Windows: Fixed windows not having proper minimum size.
    - Windows: Fixed moving windows across screens with different DPI (#72)
    - Don't center floating windows if the user set a custom position (#75)
    - Fixed floating window's title not being correct (#74)
    - Fixed focus scope not reacting when clicking on current tab (#71)